--- a/module-2/lesson-2/styles/task-2.2.3.css
+++ b/module-2/lesson-2/styles/task-2.2.3.css
@@ -1,3 +1,32 @@
 /* Your code goes below here */
-
-/* Your code goes above here */
+h1, h2, h3 {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+  }
+  
+  h1 {
+    font-size: 72px;
+    font-style: italic bold;
+    color:darkslategray
+  }
+  
+  h2 {
+    font-size: 36px;
+    font-style: oblique;
+    color: dodgerblue;
+  }
+  
+  h3 {
+    font-size: 18px;
+    font-style: italic;
+    color:forestgreen
+  }
+  
+  p {
+    font-family: 'verdana', sans-serif;
+    font-weight: 400;
+    color:red;
+  }
+  
+  
+  /* Your code goes above here */
