--- a/module-2/lesson-2/styles/task-2.2.5.css
+++ b/module-2/lesson-2/styles/task-2.2.5.css
@@ -1,3 +1,22 @@
 /* Your code goes below here */
 
-/* Your code goes above here */
+#main-heading {   /* This is an id */
+    color: red;
+  }
+  
+#paragraph-tag {
+    color: red;
+}
+
+  .font-blue {      /* This is a class */
+    color: blue;
+  }  
+
+  .list-container {
+    Padding:30px;
+    background: aquamarine;
+    border: 1px solid green;
+    border-radius: 25px;
+
+  }
+  /* Your code goes above here */
